Created requirements, updated models, trainer etc

--- a/config_trainer_p2c.ini
+++ b/config_trainer_p2c.ini
@@ -34,7 +34,7 @@ logger_folder       = "lightning_logs/Pix2Pix_test1/"
 Datasets            = ["alderson_front_highE", "alderson_front_lowE", "alderson_lat_lowE", "empty_highE", "empty_lowE",
 					   "gammex_lowE", "lasvegas_lowE", "sr132_lowE", "sr213_lowE", "sr321_lowE", "sr456_lowE", "sr645_lowE"]
 Views 			    = ["Top", "Lateral"]
-Base_Folder         = '/home/dgs2/data/proton_imaging/P2C/'
+Base_Folder         = '/home/dgs1/data/P2C/'
 Train_Size          = 0.75 # we only have 12 datasets so should be divisible ideally.
 Val_Size            = 0.25
 
