Updated GAN + inference scripts

--- a/config_trainer_p2c_unet.ini
+++ b/config_trainer_p2c_unet.ini
@@ -1,61 +1,59 @@
 [BASEMODEL]
-Batch_Size              = 64
-Precision               = "16-mixed"
-Loss_Function			= "L1Loss" #""MSELoss"
+batch_size              = 64 # 64 
+precision               = "16-mixed"
+loss_function			= "L1Loss" #"L1Loss" #""MSELoss", "WeightedMSELoss", "GradientWeightedMSELoss"
 
 [ADVANCEDMODEL]
-Drop_Rate               = 0.03
-GAN_mode			    = "vanilla" # options: "wgangp", "vanilla", "lsgan"
-Inference               = false
-Max_Epochs              = 100
-Random_Seed             = 1991
-n_gpus			        = 4
-Activation			    = "LeakyReLU" # default LeakyReLU
-Name				    = "BasicUnetPlusPlus" # 'BasicUnetPlusPlus', 'Pix2Pix'
-Unet_features			= [32, 32, 64, 128, 256, 32] #[64, 128, 256, 512, 1024, 128]
+drop_rate               = 0.05 #0.03
+gan_mode			    = "vanilla" # options: "wgangp", "vanilla", "lsgan"
+inference               = false
+max_epochs              = 50
+random_seed             = 1991
+activation			    = "LeakyReLU" # default LeakyReLU
+name				    = "BasicUnetPlusPlus" # 'BasicUnetPlusPlus', 'Pix2Pix'
+unet_features			= [32, 32, 64, 128, 256, 32] #[64, 128, 256, 512, 1024, 128]
+#unet_features           = [64, 128, 256, 512, 1024, 128]
 
 [AUGMENTATIONS]
-Median_Kernel_Size      = [5,5]
+median_kernel_size      = [3,3]#[5,5]
 
-[AUGMENTATIONS_KORNIA] # always done on the GPU.
+[AUGMENTATIONS_KORNIA] # those are transforms that will be done on the training set only.
 RandomGaussianNoise     = '{"p": 0.5, "std": 0.04}'
 RandomSharpness         = '{"p": 0.8, "sharpness": 0.8}'
 RandomMedianBlur        = '{"p": 0.5, "kernel_size": (5, 5)}'
 
 [CHECKPOINT]
-Mode                    = "min"
-Monitor                 = "val_loss_epoch"
-#logger_folder	        = "lightning_logs/second_test_with_scheduler/"
-#logger_folder	        = "lightning_logs/third_test_with_augmentations_and_lr_reduced/"
-#logger_folder          = "lightning_logs/fourth_test_with_augmentations_and_lr_reduced_and_weightedMSELoss"
-#logger_folder          = "lightning_logs/sixth_test_lr5e-5_BasicUNetPlusPlus_normalizeAfter/"
-#logger_folder          = "lightning_logs/Pix2Pix_test2_different_LRs_4e-3G_1e-6D/"
-#logger_folder          = "lightning_logs/Pix2Pix_test3_better_logging/"
-#logger_folder          = "lightning_logs/Pix2Pix_test4_updated_betas_adam/"
-#logger_folder          = "lightning_logs/Pix2Pix_test5_updated_betas_adam_reduced_batch_size_to_4/"
-#logger_folder          = "lightning_logs/Pix2Pix_test6_xavierweights_MSELossForGAN/"
-#logger_folder          = "lightning_logs/Pix2Pix_test7_xavierweights_MSELossForGAN_BetterAugments/"
-#logger_folder          = "lightning_logs/Pix2Pix_test8_added_LabelSmoothing0p03_LRDIsHalf/"
-#logger_folder          = "lightning_logs/Pix2Pix_test11_wgangp/"
-#logger_folder           = "lightning_logs/Pix2Pix_test12_wgangp_noL1loss/"
-#logger_folder           = "lightning_logs/Pix2Pix_test13_BCE_deepUnet_noL1/" # job 829
-#logger_folder           = "lightning_logs/Pix2Pix_test14_BCE_deepUnet_L1100/" # job 830
-#logger_folder			= "lightning_logs/Unet_standard_lr1e-4_L1loss_BatchSize24_4gpus"
-logger_folder			= "lightning_logs/Unet_standard_lr1e-4_L1loss_BatchSize64_4gpus_100epochs"
-
+mode                    = "min"
+monitor                 = "val_loss_epoch"
+logger_folder			= "lightning_logs/UnetPlusPlus/test_nomedian_28aug_LossOnProfile/"
 
 
 [DATA]
-Datasets                = ["alderson_front_highE", "alderson_front_lowE", "alderson_lat_lowE", "empty_highE", "empty_lowE",
-					       "gammex_lowE", "lasvegas_lowE", "sr132_lowE", "sr213_lowE", "sr321_lowE", "sr456_lowE", "sr645_lowE"]
-Views 			        = ["Top", "Lateral"]
-Base_Folder             = '/home/dgs1/data/P2C/'
-Train_Size              = 0.75 # we only have 12 datasets so should be divisible ideally.
-Val_Size                = 0.25
-
+# All the datasets are here: ["alderson_front", "alderson_front_highE", "alderson_lat", "empty", "empty_highE", "gammex", "LV", "SR_132", "SR_213", "SR_321", "SR_456", "SR_645"]
+views 			        = ["Top", "Lateral"]
+base_folder             = '/home/dgs1/data/P2C/corrected_cropped/'
+# First test which doesnt look like its learning much:
+#train_datasets			= ["alderson_front", "alderson_front_highE", "empty", "LV", "SR_132", "SR_213", "SR_321", "SR_456"]
+#val_datasets			= ["gammex", "SR_645", "alderson_lat", "empty_highE"]
+# The below is saved here - /home/dgs1/Software/Proton2Carbon/lightning_logs/UnetPlusPlus/different_data_save_config/BasicUnetPlusPlus/version_2/checkpoints/BasicUnetPlusPlus-epoch=34_val_loss=0.02.ckpt (trained on 2 gpus)
+#train_datasets			= ['LV', 'empty', 'alderson_front', 'alderson_lat', 'SR_645', 'SR_456', 'SR_213', 'SR_321', 'gammex']
+#val_datasets			= ['empty_highE', 'alderson_front_highE', 'SR_132']
+#test_datasets			= [] 
+# This one below is saved here - /home/dgs1/Software/Proton2Carbon/lightning_logs/UnetPlusPlus/different_data_save_config/BasicUnetPlusPlus/version_4/checkpoints/BasicUnetPlusPlus-epoch=21_val_loss=0.02.ckpt (trained on 2 gpus)
+#train_datasets			= ['LV', 'empty', 'alderson_front', 'empty_highE', 'alderson_front_highE', 'SR_456', 'SR_213', 'SR_321', 'SR_132']
+#val_datasets			= ['gammex', 'SR_645', 'alderson_lat']
+#test_datasets			= [] 
+# This one is running (job # 945) - I wanna see how the Gammex performs when we have different training datasets.
+#train_datasets			= ['SR_645', 'empty', 'alderson_front', 'empty_highE', 'alderson_front_highE', 'SR_456', 'alderson_lat', 'SR_321', 'SR_132']
+#val_datasets			= ['gammex', 'LV', 'SR_213']
+#test_datasets			= [] 
+# This one is running (job # 947) - I wanna see what happens when we test on Alderson, not trained on any.
+train_datasets			= ['LV', 'gammex', 'SR_645', 'empty_highE', 'empty', 'SR_456', 'SR_213', 'SR_321', 'SR_132']
+val_datasets			= ['alderson_lat', 'alderson_front', 'alderson_front_highE']
+test_datasets			= [] 
 
 [OPTIMIZER]
-Algorithm	            = 'Adam'
+algorithm	            = 'Adam'
 eps                     = 1e-7
 lr                      = 1e-4
 #lr_G                    = 2e-4#8e-5#3e-4
@@ -65,9 +63,9 @@ beta1_adam				= 0.9
 beta2_adam			    = 0.999
 
 [REGULARIZATION]
-Label_Smoothing         = 0.03
-Optimizer_Weight_Decay  = 1e-5
-#L1_Weight_G			    = 100#100
+label_smoothing         = 0.03
+optimizer_weight_decay  = 1e-5 #1e-5
+#l1_Weight_g			    = 100#100
 
 [SCHEDULER]
 #lin_gamma           = 0.8
