--- a/config_trainer_p2c_gan.ini
+++ b/config_trainer_p2c_gan.ini
@@ -1,20 +1,20 @@
 [BASEMODEL]
-Batch_Size              = 4#4
-Precision               = "16-mixed"
+batch_size              = 16#24#4
+precision               = "16-mixed"
 
 [ADVANCEDMODEL]
-Drop_Rate               = 0.04
-GAN_mode			    = "vanilla" # options: "wgangp", "vanilla", "lsgan"
-Inference               = false
-Max_Epochs              = 50
-Random_Seed             = 1991
-n_gpus			        = 2
-Activation			    = "LeakyReLU" # default LeakyReLU
-Name				    = "Pix2Pix" # 'BasicUnetPlusPlus', 'Pix2Pix'
-Unet_features			= [32, 32, 64, 128, 256, 32]#[64, 128, 256, 512, 1024, 128]
+drop_rate               = 0.2#0.05
+gan_mode			    = "wgangp" # options: "wgangp", "vanilla", "lsgan"
+inference               = false
+max_epochs              = 50
+random_seed             = 1991
+activation			    = "LeakyReLU" # default LeakyReLU
+name				    = "Pix2Pix" # 'BasicUnetPlusPlus', 'Pix2Pix'
+unet_features			= [32, 32, 64, 128, 256, 32]#[64, 128, 256, 512, 1024, 128]
+spectral_norm_D         = true # turn on or off spectral normalisation in the discrminiator layers
 
 [AUGMENTATIONS]
-Median_Kernel_Size      = [5,5]
+median_kernel_size      = [3,3]#[5,5]
 
 [AUGMENTATIONS_KORNIA] # always done on the GPU.
 RandomGaussianNoise     = '{"p": 0.5, "std": 0.04}'
@@ -22,48 +22,46 @@ RandomSharpness         = '{"p": 0.8, "sharpness": 0.8}'
 RandomMedianBlur        = '{"p": 0.5, "kernel_size": (5, 5)}'
 
 [CHECKPOINT]
-Mode                    = "min"
-Monitor                 = "val_loss_epoch"
-#logger_folder	        = "lightning_logs/second_test_with_scheduler/"
-#logger_folder	        = "lightning_logs/third_test_with_augmentations_and_lr_reduced/"
-#logger_folder          = "lightning_logs/fourth_test_with_augmentations_and_lr_reduced_and_weightedMSELoss"
-#logger_folder          = "lightning_logs/sixth_test_lr5e-5_BasicUNetPlusPlus_normalizeAfter/"
-#logger_folder          = "lightning_logs/Pix2Pix_test2_different_LRs_4e-3G_1e-6D/"
-#logger_folder          = "lightning_logs/Pix2Pix_test3_better_logging/"
-#logger_folder          = "lightning_logs/Pix2Pix_test4_updated_betas_adam/"
-#logger_folder          = "lightning_logs/Pix2Pix_test5_updated_betas_adam_reduced_batch_size_to_4/"
-#logger_folder          = "lightning_logs/Pix2Pix_test6_xavierweights_MSELossForGAN/"
-#logger_folder          = "lightning_logs/Pix2Pix_test7_xavierweights_MSELossForGAN_BetterAugments/"
-#logger_folder          = "lightning_logs/Pix2Pix_test8_added_LabelSmoothing0p03_LRDIsHalf/"
-#logger_folder          = "lightning_logs/Pix2Pix_test11_wgangp/"
-#logger_folder           = "lightning_logs/Pix2Pix_test12_wgangp_noL1loss/"
-#logger_folder           = "lightning_logs/Pix2Pix_test13_BCE_deepUnet_noL1/" # job 829
-logger_folder           = "lightning_logs/Pix2Pix_test14_BCE_deepUnet_L1100/" # job 830
-
-
+mode                    = "min"
+monitor                 = "val_loss_epoch"
+logger_folder			= "lightning_logs/Pix2Pix/GAN_test_aug28_wgang_spectralnorm_10percentdata_L1_Lambda_back_to_100"
 
 [DATA]
-Datasets                = ["alderson_front_highE", "alderson_front_lowE", "alderson_lat_lowE", "empty_highE", "empty_lowE",
-					       "gammex_lowE", "lasvegas_lowE", "sr132_lowE", "sr213_lowE", "sr321_lowE", "sr456_lowE", "sr645_lowE"]
-Views 			        = ["Top", "Lateral"]
-Base_Folder             = '/home/dgs1/data/P2C/'
-Train_Size              = 0.75 # we only have 12 datasets so should be divisible ideally.
-Val_Size                = 0.25
-
+# All the datasets are here: ["alderson_front", "alderson_front_highE", "alderson_lat", "empty", "empty_highE", "gammex", "LV", "SR_132", "SR_213", "SR_321", "SR_456", "SR_645"]
+views 			        = ["Top", "Lateral"]
+base_folder             = '/home/dgs1/data/P2C/corrected_cropped/'
+train_datasets			= ['LV', 'empty', 'alderson_front', 'alderson_lat', 'SR_645', 'SR_456', 'SR_213', 'SR_321', 'gammex']
+val_datasets			= ['empty_highE', 'alderson_front_highE', 'SR_132']
+test_datasets			= [] 
+# Confguration for model S1
+train_datasets			= ['empty', 'empty_highE', 'LV', 'alderson_front', 'alderson_front_highE']
+val_datasets			= ['gammex', 'alderson_lat']
+test_datasets			= [] 
+# Configuration for model C1
+train_datasets			= ['empty', 'empty_highE', 'SR_213', 'SR_132', 'SR_645', 'SR_456', 'gammex', 'alderson_front', 'alderson_lat']
+val_datasets			= ['SR_321', 'alderson_front_highE']
+test_datasets			= [] 
+# Configuration for model Q1
+train_datasets			= ['empty', 'empty_highE', 'SR_213', 'SR_321', 'SR_132', 'SR_456', 'LV', 'alderson_front_highE', 'alderson_lat']
+val_datasets			= ['SR_645', 'alderson_front']
+test_datasets			= []
+# Configuration for model A1
+train_datasets			= ['empty', 'empty_highE', 'SR_213', 'SR_321', 'SR_132', 'SR_456', 'LV', 'alderson_front_highE', 'alderson_lat']
+val_datasets			= ['SR_645', 'alderson_front']
+test_datasets			= []
 
 [OPTIMIZER]
-Algorithm	            = 'Adam'
+algorithm	            = 'Adam'
 eps                     = 1e-7
-#lr                     = 5e-5#8e-5#3e-4
-lr_G                    = 2e-4#8e-5#3e-4
-lr_D        		    = 1e-4#1e-4
+lr_g                    = 1e-4 #2e-4
+lr_d        		    = 1e-5 #1e-4
 beta1_adam			    = 0.5
 beta2_adam			    = 0.999
 
 [REGULARIZATION]
-Label_Smoothing         = 0.03
-Optimizer_Weight_Decay  = 0#1e-4
-L1_Weight_G			    = 100#100
+label_smoothing         = 0.03
+optimizer_weight_decay  = 5e-5#0#1e-4
+l1_weight_g			    = 100#100
 
 [SCHEDULER]
 #lin_gamma           = 0.8
